== 0.10.0

* Enhancements
  * Stickies can now have Due Dates
  * Projects Index has been simplified and now displays:
    * Number of stickies that are past due, due today, and due this week
    * Owner, editors, and viewers on project
  * Using Rails 3.1.3 and Contour ~> 0.6.0
  
== 0.9.0

* Enhancements
  * Using Rails 3.1.1, Ruby 1.9.3.p0, and Contour 0.5.6
  * Emails sent by notes now:
    * Have consistent subjects lines
    * Sticky Added email now displays who is assigned to the sticky
  * Right and Left Keyboard clicks now navigate between frames on the project show page

* Bug Fix
  * Deleting a frame now moves the associated stickies to the project backlog

* Testing
  * Analyzing test coverage using SimpleCov gem, test coverage now at 92%

== 0.8.0

* Enhancements
  * Emails are now sent for stickies when they are completed, can be disabled in user settings
  * Owners who can edit a project or a sticky can now
    * delete comments attached to the project or sticky
    * move comments to another between project or sticky

== 0.7.3

* Refactoring
  * Updating to Contour version 0.5.0

== 0.7.2

* Refactoring
  * Updating to Contour version 0.4.0

== 0.7.1

* Refactoring
  * Updating static image links for Contour version 0.3.2

== 0.7.0

* Enhancements
  * Overall Graph is now available for system administrators
  * The currently active frame is now set initially on the project page
  * Notes now uses Contour for application layout, registration, and authentication

* Refactoring
  * Changed object_id to class_id and object_model to class_name to avoid conflicts with Rails
  * JavaScript rewritten using CoffeeScript

* Bug Fixes
  * Graphs now properly render when displaying project names that contain apostrophes
  * JavaScript for the arrows next to the frame selection fixed, frames now change correctly

== 0.6.1

* Enhancements
  * Menu bar now sticks to the top of the window when the user scrolls down the page

== 0.6.0

* Enhancements