@@ -52,6 +52,7 @@
       <%= f.text_field :due_date, :class => 'datepicker', :value => @sticky.due_date ? @sticky.due_date.strftime('%m/%d/%Y') : '' %>
     </div>
     
+    <% if false %>
     <div class="field">
       <%= f.label :start_date %><br />
       <%= f.text_field :start_date, :class => 'datepicker', :value => @sticky.start_date ? @sticky.start_date.strftime('%m/%d/%Y') : '' %>
@@ -60,6 +61,7 @@
       <%= f.label :end_date %><br />
       <%= f.text_field :end_date, :class => 'datepicker', :value => @sticky.end_date ? @sticky.end_date.strftime('%m/%d/%Y') : '' %>
     </div>
+    <% end %>
   </fieldset>
   
   <div class="actions">
